Closed Bug 1544421 Opened 5 years ago Closed 5 years ago

BrowsingContext's IPC Read method doesn't actually check validity

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Fission Milestone M2
Tracking Status
firefox68 --- fixed

People

(Reporter: nika, Assigned: nika)

References

Details

Attachments

(1 file)

No description provided.
Pushed by nlayzell@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1fcd483102a0
Actually check for a valid bc in read, r=farre
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Depends on: 1563123
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: