Bug 1544421 - Actually check for a valid bc in read, r=farre

Differential Revision: https://phabricator.services.mozilla.com/D27511

--HG--
extra : moz-landing-system : lando